--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,45 @@
-# Ignore Gradle project-specific cache directory
+## Gradle
 .gradle
+gradle-app.setting
+build/
 
-# Ignore Gradle build output directory
-build
+## Java:
+*.class
+*.war
+*.ear
+hs_err_pid*
+
+## IntelliJ, Android Studio:
+.idea/
+*.ipr
+*.iws
+*.iml
+out/
+
+## Eclipse
+.classpath
+.project
+.metadata
+**/bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+.settings/
+.loadpath
+.externalToolBuilders/
+*.launch
+
+## NetBeans
+**/nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+## OS Specific
+.DS_Store
+*.symbolMap
