Add project name to generatable jar file

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.jvmargs=-Xms128m -Xmx512m -Dfile.encoding=UTF-8 -Dconsole.encoding=UTF-8
 org.gradle.configureondemand=false
+projectName = 'inGameConsole-utils'
 gdxVersion=1.10.0
 inGameConsoleVersion=1.0.0
