--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ apply plugin: 'java-library'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
+[compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
+
 repositories {
     mavenLocal()
     mavenCentral()
@@ -19,4 +21,11 @@ repositories {
 dependencies {
     api "com.badlogicgames.gdx:gdx:$gdxVersion"
     api "com.strongjoshua:libgdx-inGameConsole:$inGameConsoleVersion"
+}
+
+jar {
+    archiveBaseName.set(project.name)
+    manifest {
+        attributes 'Implementation-Title': projectName, 'Implementation-Version': archiveVersion
+    }
 }
