Fix line length, tests

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
 }
 
+apply plugin: 'java'
 apply plugin: 'java-library'
 
 sourceCompatibility = 1.7
@@ -21,4 +22,11 @@ repositories {
 dependencies {
     api "com.badlogicgames.gdx:gdx:$gdxVersion"
     api "com.strongjoshua:libgdx-inGameConsole:$inGameConsoleVersion"
+
+    testImplementation "junit:junit:$junitVersion"
+    testImplementation "org.mockito:mockito-core:$mockitoVersion"
+}
+
+test {
+    useJUnit()
 }
