--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,5 @@ org.gradle.configureondemand=false
 projectName = 'inGameConsole-utils'
 gdxVersion=1.10.0
 inGameConsoleVersion=1.0.0
+junitVersion=4.13.2
+mockitoVersion=3.12.4
