Add publishing task

--- a/build.gradle
+++ b/build.gradle
@@ -34,3 +34,11 @@ dependencies {
 test {
     useJUnit()
 }
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+}
