--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xms128m -Xmx512m -Dfile.encoding=UTF-8 -Dconsole.encoding=UTF-8
 org.gradle.configureondemand=false
-projectName = 'inGameConsole-utils'
+projectName = inGameConsole-utils
 gdxVersion=1.10.0
 inGameConsoleVersion=1.0.0
 junitVersion=4.13.2
