--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,10 @@ buildscript {
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         gradlePluginPortal()
     }
-    dependencies {
-        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.17.0'
-    }
 }
 
 apply plugin: 'java-library'
-apply plugin: 'com.vanniktech.maven.publish'
+apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -61,9 +58,10 @@ test {
     useJUnit()
 }
 
-jar {
-    archiveBaseName.set(projectName)
-    manifest {
-        attributes 'Implementation-Title': projectName, 'Implementation-Version': archiveVersion
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
     }
 }
